--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "university-new",
+  "name": "node-ts-starter",
   "version": "1.0.0",
   "main": "src/server.ts",
   "license": "MIT",
+  "author": "https://github.com/coderboy-raiyan",
   "scripts": {
     "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
     "lint:check": "eslint --ignore-path .eslintignore --ext .js,.ts .",
